--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,16 @@
         android:text="开始连接" />
 
     <TextView
+        android:id="@+id/tv_btn_8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:background="#FFFFFF"
+        android:padding="10dp"
+        android:text="断开连接" />
+
+    <TextView
         android:id="@+id/tv_btn_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
