--- a/app/src/main/res/layout/activity_close.xml
+++ b/app/src/main/res/layout/activity_close.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <EditText
         android:id="@+id/edit_input_merchant_order_no"
         android:layout_width="match_parent"
@@ -16,7 +18,7 @@
         android:layout_marginTop="10dp"
         android:background="#FFFFFF"
         android:padding="10dp"
-        android:text="查询" />
+        android:text="确认" />
 
     <TextView
         android:id="@+id/tv_btn_2"
