--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,16 +52,6 @@
         android:visibility="gone">
 
         <TextView
-            android:id="@+id/tv_btn_4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-            android:background="#FFFFFF"
-            android:padding="10dp"
-            android:text="取消配对" />
-
-        <TextView
             android:id="@+id/tv_btn_6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -69,7 +59,7 @@
             android:layout_marginTop="10dp"
             android:background="#FFFFFF"
             android:padding="10dp"
-            android:text="消费" />
+            android:text="Sale" />
 
         <TextView
             android:id="@+id/tv_btn_7"
@@ -79,7 +69,7 @@
             android:layout_marginTop="10dp"
             android:background="#FFFFFF"
             android:padding="10dp"
-            android:text="退款" />
+            android:text="Refund" />
 
         <TextView
             android:id="@+id/tv_btn_8"
@@ -89,7 +79,7 @@
             android:layout_marginTop="10dp"
             android:background="#FFFFFF"
             android:padding="10dp"
-            android:text="查询" />
+            android:text="Query" />
 
         <TextView
             android:id="@+id/tv_btn_9"
@@ -99,7 +89,7 @@
             android:layout_marginTop="10dp"
             android:background="#FFFFFF"
             android:padding="10dp"
-            android:text="关闭交易" />
+            android:text="Close" />
     </LinearLayout>
 
     <TextView
@@ -110,7 +100,7 @@
         android:layout_marginTop="10dp"
         android:background="#FFFFFF"
         android:padding="10dp"
-        android:text="退出程序" />
+        android:text="Exit App" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="wrap_content"
