--- a/app/src/main/res/layout/activity_query.xml
+++ b/app/src/main/res/layout/activity_query.xml
@@ -8,7 +8,7 @@
         android:id="@+id/edit_input_merchant_order_no"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="请输入商户订单号" />
+        android:hint="Please input merchant order no" />
 
     <TextView
         android:id="@+id/tv_btn_1"
@@ -18,7 +18,7 @@
         android:layout_marginTop="10dp"
         android:background="#FFFFFF"
         android:padding="10dp"
-        android:text="查询" />
+        android:text="Query" />
 
     <TextView
         android:id="@+id/tv_btn_2"
@@ -28,7 +28,7 @@
         android:layout_marginTop="10dp"
         android:background="#FFFFFF"
         android:padding="10dp"
-        android:text="关闭页面" />
+        android:text="Close" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="wrap_content"
