--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <EditText
         android:id="@+id/edit_input_amount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="请输入金额（元为单位）" />
+        android:hint="Please input amount" />
 
     <TextView
         android:id="@+id/tv_btn_1"
@@ -17,7 +18,7 @@
         android:layout_marginTop="10dp"
         android:background="#FFFFFF"
         android:padding="10dp"
-        android:text="开始交易" />
+        android:text="Sale" />
 
     <TextView
         android:id="@+id/tv_btn_2"
@@ -27,7 +28,7 @@
         android:layout_marginTop="10dp"
         android:background="#FFFFFF"
         android:padding="10dp"
-        android:text="关闭页面" />
+        android:text="Close" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="wrap_content"
