--- a/app/src/main/res/layout/activity_refund.xml
+++ b/app/src/main/res/layout/activity_refund.xml
@@ -8,13 +8,13 @@
         android:id="@+id/edit_input_amount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="请输入金额（元为单位）" />
+        android:hint="Please input amount" />
 
     <EditText
         android:id="@+id/edit_input_merchant_order_no"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="请输入原商户订单号" />
+        android:hint="Please input orig merchant order no" />
 
     <TextView
         android:id="@+id/tv_btn_1"
@@ -24,7 +24,7 @@
         android:layout_marginTop="10dp"
         android:background="#FFFFFF"
         android:padding="10dp"
-        android:text="退款" />
+        android:text="Refund" />
 
     <TextView
         android:id="@+id/tv_btn_2"
@@ -34,7 +34,7 @@
         android:layout_marginTop="10dp"
         android:background="#FFFFFF"
         android:padding="10dp"
-        android:text="关闭页面" />
+        android:text="Close" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="wrap_content"
