--- a/app/src/main/res/layout/activity_auth_complete.xml
+++ b/app/src/main/res/layout/activity_auth_complete.xml
@@ -1,25 +1,28 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#FFFFFF"
+    android:orientation="vertical"
     android:padding="20dp">
 
     <EditText
         android:id="@+id/edit_input_amount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Please input amount"
+        android:digits="1234567890."
+        android:hint="@string/OrderAmount"
         android:inputType="number"
-        android:padding="10dp" />
+        android:padding="10dp"/>
 
     <EditText
-        android:id="@+id/edit_input_tip_amount"
+        android:id="@+id/edit_input_merchant_order_no"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Please input tip amount"
+        android:digits="1234567890."
+        android:hint="@string/orig_merchant_order_no"
         android:inputType="number"
-        android:padding="10dp" />
+        android:padding="10dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,8 +34,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="false"
-            android:padding="10dp"
-            android:text="Confirm on terminal" />
+            android:text="@string/confirm_on_terminal"
+            android:padding="10dp" />
 
         <View
             android:layout_width="30dp"
@@ -44,7 +47,8 @@
             android:layout_height="wrap_content"
             android:checked="false"
             android:padding="10dp"
-            android:text="Screen tip" />
+            android:text="@string/screen_tip" />
+
 
     </LinearLayout>
 
@@ -62,40 +66,39 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Print:"
+                android:text="@string/print"
                 android:textColor="#000000" />
-
             <RadioButton
                 android:id="@+id/option_0"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checked="true"
-                android:text="No print" />
+                android:text="@string/no_print" />
 
             <RadioButton
                 android:id="@+id/option_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Merchant" />
+                android:text="@string/merchant" />
 
             <RadioButton
                 android:id="@+id/option_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="CardHolder" />
+                android:text="@string/cardholder" />
 
             <RadioButton
                 android:id="@+id/option_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="All" />
+                android:text="@string/all" />
         </RadioGroup>
     </LinearLayout>
 
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/tv_btn_1"
@@ -107,11 +110,7 @@
             android:textColor="#000000"
             android:gravity="center"
             android:padding="10dp"
-            android:text="Sale" />
-
-        <View
-            android:layout_width="20dp"
-            android:layout_height="0dp" />
+            android:text="@string/Complete" />
 
         <TextView
             android:id="@+id/tv_btn_close"
@@ -123,8 +122,9 @@
             android:textColor="#000000"
             android:gravity="center"
             android:padding="10dp"
-            android:text="Close Order" />
+            android:text="@string/Close" />
     </LinearLayout>
+
 
     <TextView
         android:id="@+id/tv_btn_2"
@@ -133,10 +133,10 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
         android:background="#FFFFFF"
-        android:textColor="#000000"
         android:gravity="center"
+        android:textColor="#000000"
         android:padding="10dp"
-        android:text="Back" />
+        android:text="@string/back" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="wrap_content"
