--- a/app/src/main/res/layout/activity_close.xml
+++ b/app/src/main/res/layout/activity_close.xml
@@ -6,29 +6,33 @@
 
     <EditText
         android:id="@+id/edit_input_merchant_order_no"
-        android:layout_width="match_parent"
+        android:layout_width="395dp"
+        android:padding="10dp"
+        android:layout_marginTop="10dp"
         android:layout_height="wrap_content"
-        android:hint="请输入商户订单号" />
+        android:hint="Please input orig merchant order no" />
 
     <TextView
         android:id="@+id/tv_btn_1"
-        android:layout_width="wrap_content"
+        android:gravity="center"
+        android:layout_width="395dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
         android:background="#FFFFFF"
         android:padding="10dp"
-        android:text="确认" />
+        android:text="Close" />
 
     <TextView
         android:id="@+id/tv_btn_2"
-        android:layout_width="wrap_content"
+        android:layout_width="395dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
         android:background="#FFFFFF"
         android:padding="10dp"
-        android:text="关闭页面" />
+        android:gravity="center"
+        android:text="Back" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="wrap_content"
