--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,114 +5,24 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tv_btn_1"
-        android:layout_width="wrap_content"
+        android:id="@+id/tv_btn_wlan_mode"
+        android:layout_width="390dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
         android:background="#FFFFFF"
+        android:gravity="center"
         android:padding="10dp"
-        android:text="Start Server Connection" />
+        android:text="Wlan Mode" />
 
     <TextView
-        android:id="@+id/tv_btn_2"
-        android:layout_width="wrap_content"
+        android:id="@+id/tv_btn_usb_mode"
+        android:layout_width="390dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
         android:background="#FFFFFF"
+        android:gravity="center"
         android:padding="10dp"
-        android:text="Connect" />
-
-    <TextView
-        android:id="@+id/tv_btn_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
-        android:background="#FFFFFF"
-        android:padding="10dp"
-        android:text="Disconnect" />
-
-    <LinearLayout
-        android:id="@+id/ll_layout1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <TextView
-            android:id="@+id/tv_btn_5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-            android:background="#FFFFFF"
-            android:padding="10dp"
-            android:text="UnPair" />
-
-        <TextView
-            android:id="@+id/tv_btn_6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-            android:background="#FFFFFF"
-            android:padding="10dp"
-            android:text="Sale" />
-
-        <TextView
-            android:id="@+id/tv_btn_7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-            android:background="#FFFFFF"
-            android:padding="10dp"
-            android:text="Refund" />
-
-        <TextView
-            android:id="@+id/tv_btn_8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-            android:background="#FFFFFF"
-            android:padding="10dp"
-            android:text="Query" />
-
-        <TextView
-            android:id="@+id/tv_btn_9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-            android:background="#FFFFFF"
-            android:padding="10dp"
-            android:text="Close" />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/tv_btn_10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
-        android:background="#FFFFFF"
-        android:padding="10dp"
-        android:text="Exit App" />
-
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/tv_text_1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-            android:padding="10dp"
-            android:text="" />
-    </androidx.core.widget.NestedScrollView>
+        android:text="CDC USB Mode" />
 </LinearLayout>
