--- a/app/src/main/res/layout/activity_cashback.xml
+++ b/app/src/main/res/layout/activity_cashback.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,17 +10,19 @@
         android:id="@+id/edit_input_amount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:digits="1234567890."
         android:hint="Please input amount"
-        android:inputType="number"
-        android:padding="10dp" />
+        android:padding="10dp"
+        android:inputType="number" />
 
     <EditText
-        android:id="@+id/edit_input_tip_amount"
+        android:id="@+id/edit_input_cashback_amount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Please input tip amount"
-        android:inputType="number"
-        android:padding="10dp" />
+        android:digits="1234567890."
+        android:padding="10dp"
+        android:hint="Please input CashBack amount"
+        android:inputType="number" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,11 +34,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="false"
-            android:padding="10dp"
             android:text="Confirm on terminal" />
 
         <View
-            android:layout_width="30dp"
+            android:layout_width="1dp"
             android:layout_height="0dp" />
 
         <CheckBox
@@ -43,8 +45,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="false"
-            android:padding="10dp"
             android:text="Screen tip" />
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="0dp" />
+
+        <CheckBox
+            android:id="@+id/cb_screen_signature"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            android:text="Screen signature" />
 
     </LinearLayout>
 
@@ -64,7 +76,6 @@
                 android:layout_height="wrap_content"
                 android:text="Print:"
                 android:textColor="#000000" />
-
             <RadioButton
                 android:id="@+id/option_0"
                 android:layout_width="wrap_content"
@@ -92,10 +103,10 @@
         </RadioGroup>
     </LinearLayout>
 
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/tv_btn_1"
@@ -104,14 +115,10 @@
             android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:background="#FFFFFF"
-            android:textColor="#000000"
             android:gravity="center"
             android:padding="10dp"
-            android:text="Sale" />
-
-        <View
-            android:layout_width="20dp"
-            android:layout_height="0dp" />
+            android:textColor="#000000"
+            android:text="Pay" />
 
         <TextView
             android:id="@+id/tv_btn_close"
@@ -119,8 +126,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_weight="1"
-            android:background="#FFFFFF"
             android:textColor="#000000"
+            android:background="#FFFFFF"
             android:gravity="center"
             android:padding="10dp"
             android:text="Close Order" />
