--- a/app/src/main/res/layout/activity_query.xml
+++ b/app/src/main/res/layout/activity_query.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#FFFFFF"
+    android:padding="20dp">
 
     <EditText
         android:id="@+id/edit_input_merchant_order_no"
@@ -12,23 +14,27 @@
 
     <TextView
         android:id="@+id/tv_btn_1"
-        android:layout_width="wrap_content"
+        android:gravity="center"
+        android:layout_width="395dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
         android:background="#FFFFFF"
+        android:textColor="#000000"
         android:padding="10dp"
         android:text="Query" />
 
     <TextView
         android:id="@+id/tv_btn_2"
-        android:layout_width="wrap_content"
+        android:gravity="center"
+        android:layout_width="395dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
         android:background="#FFFFFF"
+        android:textColor="#000000"
         android:padding="10dp"
-        android:text="Close" />
+        android:text="Back" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="wrap_content"
