--- a/app/src/main/res/layout/activity_refund.xml
+++ b/app/src/main/res/layout/activity_refund.xml
@@ -2,39 +2,160 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     android:orientation="vertical">
 
     <EditText
         android:id="@+id/edit_input_amount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:digits="1234567890."
+        android:inputType="number"
+        android:padding="10dp"
         android:hint="Please input amount" />
 
     <EditText
         android:id="@+id/edit_input_merchant_order_no"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         android:hint="Please input orig merchant order no" />
 
-    <TextView
-        android:id="@+id/tv_btn_1"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
-        android:background="#FFFFFF"
-        android:padding="10dp"
-        android:text="Refund" />
+        android:layout_marginTop="20dp">
+
+        <CheckBox
+            android:id="@+id/confirm_on_terminal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            android:padding="10dp"
+            android:text="Confirm on terminal" />
+
+        <View
+            android:layout_width="30dp"
+            android:layout_height="0dp" />
+
+        <CheckBox
+            android:id="@+id/cb_screen_tip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            android:text="Screen tip" />
+
+        <View
+            android:layout_width="30dp"
+            android:layout_height="0dp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp">
+
+        <RadioGroup
+            android:id="@+id/radioGroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Print:"
+                android:textColor="#000000" />
+            <RadioButton
+                android:id="@+id/option_0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="No print" />
+
+            <RadioButton
+                android:id="@+id/option_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Merchant" />
+
+            <RadioButton
+                android:id="@+id/option_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="CardHolder" />
+
+            <RadioButton
+                android:id="@+id/option_3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="All" />
+        </RadioGroup>
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp">
+
+        <TextView
+            android:id="@+id/tv_btn_1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:background="#FFFFFF"
+            android:textColor="#000000"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="Refund" />
+
+        <View
+            android:layout_width="10dp"
+            android:layout_height="1dp" />
+
+        <TextView
+            android:id="@+id/tv_btn_4"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:background="#FFFFFF"
+            android:textColor="#000000"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="Void" />
+
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/tv_btn_2"
-        android:layout_width="wrap_content"
+        android:id="@+id/tv_btn_close"
+        android:gravity="center"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
         android:background="#FFFFFF"
+        android:textColor="#000000"
         android:padding="10dp"
-        android:text="Close" />
+        android:text="Close Order"
+        />
+
+    <TextView
+            android:id="@+id/tv_btn_2"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:background="#FFFFFF"
+        android:textColor="#000000"
+            android:padding="10dp"
+            android:text="Back" />
+
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="wrap_content"
@@ -49,4 +170,14 @@
             android:padding="10dp"
             android:text="" />
     </androidx.core.widget.NestedScrollView>
+
+    <TextView
+        android:id="@+id/tv_version"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_marginBottom="20dp"
+        android:gravity="center"
+        android:text="Refund requires input of amount and order no; Void only needs order no." />
+
 </LinearLayout>
