--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -34,62 +34,7 @@
             android:padding="10dp"
             android:text="Confirm on terminal" />
 
-        <View
-            android:layout_width="30dp"
-            android:layout_height="0dp" />
 
-        <CheckBox
-            android:id="@+id/cb_screen_tip"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:checked="false"
-            android:padding="10dp"
-            android:text="Screen tip" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp">
-
-        <RadioGroup
-            android:id="@+id/radioGroup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Print:"
-                android:textColor="#000000" />
-
-            <RadioButton
-                android:id="@+id/option_0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="true"
-                android:text="No print" />
-
-            <RadioButton
-                android:id="@+id/option_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Merchant" />
-
-            <RadioButton
-                android:id="@+id/option_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="CardHolder" />
-
-            <RadioButton
-                android:id="@+id/option_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="All" />
-        </RadioGroup>
     </LinearLayout>
 
     <LinearLayout
@@ -114,7 +59,7 @@
             android:layout_height="0dp" />
 
         <TextView
-            android:id="@+id/tv_btn_close"
+            android:id="@+id/tv_btn_cancel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -123,7 +68,7 @@
             android:textColor="#000000"
             android:gravity="center"
             android:padding="10dp"
-            android:text="Close Order" />
+            android:text="Cancel Order" />
     </LinearLayout>
 
     <TextView
