--- a/app/src/main/res/layout/activity_usb.xml
+++ b/app/src/main/res/layout/activity_usb.xml
@@ -15,17 +15,6 @@
         android:padding="10dp"
         android:text="Open port" />
 
-    <TextView
-        android:id="@+id/tv_btn_close"
-        android:layout_width="390dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
-        android:background="#FFFFFF"
-        android:gravity="center"
-        android:padding="10dp"
-        android:text="Close Port"
-        android:visibility="gone" />
 
     <LinearLayout
         android:id="@+id/ll_layout1"
@@ -66,40 +55,7 @@
             android:background="#FFFFFF"
             android:gravity="center"
             android:padding="10dp"
-            android:text="Refund/Void" />
-
-        <TextView
-            android:id="@+id/tv_btn_auth"
-            android:layout_width="390dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-            android:background="#FFFFFF"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="Auth" />
-
-        <TextView
-            android:id="@+id/tv_btn_complete"
-            android:layout_width="390dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-            android:background="#FFFFFF"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="AuthComplete" />
-
-        <TextView
-            android:id="@+id/tv_btn_cashback"
-            android:layout_width="390dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-            android:background="#FFFFFF"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="CashBack" />
+            android:text="Refund" />
 
         <TextView
             android:id="@+id/tv_btn_query"
