--- a/app/src/main/res/layout/activity_auth_complete.xml
+++ b/app/src/main/res/layout/activity_auth_complete.xml
@@ -37,64 +37,7 @@
             android:text="@string/confirm_on_terminal"
             android:padding="10dp" />
 
-        <View
-            android:layout_width="30dp"
-            android:layout_height="0dp" />
-
-        <CheckBox
-            android:id="@+id/cb_screen_tip"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:checked="false"
-            android:padding="10dp"
-            android:text="@string/screen_tip" />
-
-
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp">
-
-        <RadioGroup
-            android:id="@+id/radioGroup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/print"
-                android:textColor="#000000" />
-            <RadioButton
-                android:id="@+id/option_0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="true"
-                android:text="@string/no_print" />
-
-            <RadioButton
-                android:id="@+id/option_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/merchant" />
-
-            <RadioButton
-                android:id="@+id/option_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/cardholder" />
-
-            <RadioButton
-                android:id="@+id/option_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/all" />
-        </RadioGroup>
-    </LinearLayout>
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -113,7 +56,7 @@
             android:text="@string/Complete" />
 
         <TextView
-            android:id="@+id/tv_btn_close"
+            android:id="@+id/tv_btn_cancel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -122,7 +65,7 @@
             android:textColor="#000000"
             android:gravity="center"
             android:padding="10dp"
-            android:text="@string/Close" />
+            android:text="Cancel Order" />
     </LinearLayout>
 
 
