--- a/app/src/main/res/layout/activity_cashback.xml
+++ b/app/src/main/res/layout/activity_cashback.xml
@@ -36,73 +36,7 @@
             android:checked="false"
             android:text="Confirm on terminal" />
 
-        <View
-            android:layout_width="1dp"
-            android:layout_height="0dp" />
-
-        <CheckBox
-            android:id="@+id/cb_screen_tip"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:checked="false"
-            android:text="Screen tip" />
-
-        <View
-            android:layout_width="1dp"
-            android:layout_height="0dp" />
-
-        <CheckBox
-            android:id="@+id/cb_screen_signature"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:checked="false"
-            android:text="Screen signature" />
-
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp">
-
-        <RadioGroup
-            android:id="@+id/radioGroup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Print:"
-                android:textColor="#000000" />
-            <RadioButton
-                android:id="@+id/option_0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="true"
-                android:text="No print" />
-
-            <RadioButton
-                android:id="@+id/option_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Merchant" />
-
-            <RadioButton
-                android:id="@+id/option_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="CardHolder" />
-
-            <RadioButton
-                android:id="@+id/option_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="All" />
-        </RadioGroup>
-    </LinearLayout>
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -121,7 +55,7 @@
             android:text="Pay" />
 
         <TextView
-            android:id="@+id/tv_btn_close"
+            android:id="@+id/tv_btn_cancel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -130,7 +64,7 @@
             android:background="#FFFFFF"
             android:gravity="center"
             android:padding="10dp"
-            android:text="Close Order" />
+            android:text="Cancel Order" />
     </LinearLayout>
 
     <TextView
