--- a/app/src/main/res/layout/activity_refund.xml
+++ b/app/src/main/res/layout/activity_refund.xml
@@ -34,66 +34,8 @@
             android:padding="10dp"
             android:text="Confirm on terminal" />
 
-        <View
-            android:layout_width="30dp"
-            android:layout_height="0dp" />
-
-        <CheckBox
-            android:id="@+id/cb_screen_tip"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:checked="false"
-            android:text="Screen tip" />
-
-        <View
-            android:layout_width="30dp"
-            android:layout_height="0dp" />
 
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp">
-
-        <RadioGroup
-            android:id="@+id/radioGroup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Print:"
-                android:textColor="#000000" />
-            <RadioButton
-                android:id="@+id/option_0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="true"
-                android:text="No print" />
-
-            <RadioButton
-                android:id="@+id/option_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Merchant" />
-
-            <RadioButton
-                android:id="@+id/option_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="CardHolder" />
-
-            <RadioButton
-                android:id="@+id/option_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="All" />
-        </RadioGroup>
-    </LinearLayout>
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -118,7 +60,7 @@
             android:layout_height="1dp" />
 
         <TextView
-            android:id="@+id/tv_btn_4"
+            android:id="@+id/tv_btn_cancel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -128,21 +70,9 @@
             android:textColor="#000000"
             android:gravity="center"
             android:padding="10dp"
-            android:text="Void" />
+            android:text="Cancel Order" />
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/tv_btn_close"
-        android:gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="#FFFFFF"
-        android:textColor="#000000"
-        android:padding="10dp"
-        android:text="Close Order"
-        />
 
     <TextView
             android:id="@+id/tv_btn_2"
